@@ -477,6 +477,7 @@ kpcest_err_handler: Max errors exceeded..Closing connection
     - fixed a crashing bug handling the case when there are multiple objects of different incompatible types added to a collection; now an exception is raised
     - implemented binding number types by placeholder (including in/out vars)
     - implemented binding arrays of scalar values for input and output
+    - implemented support for returning an empty list or hash after a short read with SQLStatement::fetchRows() or SQLStatement::fetchColumns(); if one of these methods is called a second time after returning an empty data structure, then an exception is raised
 
     @subsection oracle31 oracle Driver Version 3.1
     
