@@ -1,36 +1,56 @@
 #!/usr/bin/env qore
 
 %require-our
+%new-style
 
-our hash $thash;
-our int $errors;
-our hash $o.verbose = True;
-#$o.info = True;
+our hash thash;
+our int errors;
+our hash o.verbose = True;
+#o.info = True;
 
 sub main() {
-    my string $dsstr = shift $ARGV;
-    if ($dsstr !~ /^[a-z0-9_]+:/)
-        $dsstr = "oracle:" + $dsstr;
-    my hash $dsh = parseDatasource($dsstr);
-    my DatasourcePool $ds($dsh);
+    *string connstr = shift ARGV;
 
-    my SQLStatement $insert_stmt($ds);
-    $insert_stmt.prepare("insert into test values (%v, %v, %v, %v, %v)");
+    if (!connstr) {
+	connstr = ENV.QORE_DB_CONNSTR;
+	if (!connstr) {
+	    string hn = gethostname();
+	    switch (hn) {
+		case /^star/: connstr = "oracle:omquser/omquser@star"; break;
+		case /^quasar/: connstr = "oracle:omquser/omquser@el7"; break;
+		case /^el6/:
+		case /^el5/:
+		case /^manatee/:
+		case /^xbox/: connstr = "oracle:omquser/omquser@xbox"; break;
+		default: {
+		    stderr.printf("cannot detect DB connect string from hostname and QORE_DB_CONNSTR environment variable not set; cannot run SqlUtil tests\n");
+		    return;
+		}
+	    }
+	}
+    }
 
-    my SQLStatement $select_stmt($ds);
-    $select_stmt.prepare("select * from test");
+    if (connstr !~ /^[a-z0-9_]+:/)
+        connstr = "oracle:" + connstr;
+    DatasourcePool ds(connstr);
 
-    my SQLStatement $select_into_stmt($ds);
-    $select_into_stmt.prepare("begin select sysdate into :dt from dual; end;");
+    SQLStatement insert_stmt(ds);
+    insert_stmt.prepare("insert into test values (%v, %v, %v, %v, %v)");
 
-    my SQLStatement $select_err_stmt($ds);
-    $select_err_stmt.prepare("select * from blah");
+    SQLStatement select_stmt(ds);
+    select_stmt.prepare("select * from test");
 
-    my SQLStatement $delete_stmt($ds);
-    $delete_stmt.prepare("delete from test");
+    SQLStatement select_into_stmt(ds);
+    select_into_stmt.prepare("begin select sysdate into :dt from dual; end;");
 
-    my SQLStatement $plsql($ds);
-    $plsql.prepare("
+    SQLStatement select_err_stmt(ds);
+    select_err_stmt.prepare("select * from blah");
+
+    SQLStatement delete_stmt(ds);
+    delete_stmt.prepare("delete from test");
+
+    SQLStatement plsql(ds);
+    plsql.prepare("
 declare
     var number;
 begin
@@ -38,191 +58,207 @@ begin
     :an_output := var;
 end;");
 
-    create_table($ds);
-    test1($insert_stmt, $select_stmt);
-    test2($select_into_stmt);
-    test3($select_err_stmt);
-    test4($delete_stmt, $select_stmt);
-    test5($plsql);
+    create_table(ds);
+    test1(insert_stmt, select_stmt);
+    test2(select_into_stmt);
+    test3(select_err_stmt);
+    test4(delete_stmt, select_stmt);
+    test5(plsql);
 }
 
-sub info(string $msg) {
-    if ($o.info)
-	vprintf($msg + "\n", $argv);
+sub info(string msg) {
+    if (o.info)
+	vprintf(msg + "\n", argv);
 }
 
-sub test_value(any $v1, any $v2, string $msg) {
-    if ($v1 === $v2) {
-	if ($o.verbose)
-	    printf("OK: %s test\n", $msg);
+sub test_value(any v1, any v2, string msg) {
+    if (v1 === v2) {
+	if (o.verbose)
+	    printf("OK: %s test\n", msg);
     }
     else {
-        printf("ERROR: %s test failed! (%N != %N)\n", $msg, $v1, $v2);
-        #printf("%s%s", dbg_node_info($v1), dbg_node_info($v2));
-        ++$errors;
+        printf("ERROR: %s test failed! (%N != %N)\n", msg, v1, v2);
+        #printf("%s%s", dbg_node_info(v1), dbg_node_info(v2));
+        ++errors;
     }
-    $thash.$msg = True;
+    thash{msg} = True;
 }
 
-sub create_table(DatasourcePool $dsp) {
-    my SQLStatement $drop_stmt($dsp);
-    $drop_stmt.prepare("drop table test");
+sub create_table(DatasourcePool dsp) {
+    SQLStatement drop_stmt(dsp);
+    drop_stmt.prepare("drop table test");
 
-    on_exit $drop_stmt.commit();
+    on_exit drop_stmt.commit();
 
     try {
-	$drop_stmt.exec();
+	drop_stmt.exec();
     }
     catch () {
 	info("ignoring drop table error");
     }
 
-    $drop_stmt.prepare("create table test (ts timestamp, tstz timestamp with time zone, tsltz timestamp with local time zone, d date, r raw(64))");
-    $drop_stmt.exec();
+    drop_stmt.prepare("create table test (ts timestamp, tstz timestamp with time zone, tsltz timestamp with local time zone, d date, r raw(64))");
+    drop_stmt.exec();
 }
 
-sub test1(SQLStatement $insert_stmt, SQLStatement $select_stmt) {
+sub test1(SQLStatement insert_stmt, SQLStatement select_stmt) {
     info("test1");
     #TimeZone::setRegion("America/Chicago");
 
-    my date $now = now_us();
-    info("current time: %n", $now);
+    date now = now_us();
+    info("current time: %n", now);
 
-    my binary $bin = binary("hello");
+    binary bin = binary("hello");
 
     {
 	info("starting insert");
 
-	my code $insert = sub () {
-	    $insert_stmt.bind($now, $now, $now, $now, $bin);
-	    info("bind done: %y", $now);
+	code insert = sub () {
+	    insert_stmt.bind(now, now, now, now, bin);
+	    info("bind done: %y", now);
 
-	    $insert_stmt.beginTransaction();
-	    on_success $insert_stmt.commit();
-	    $insert_stmt.exec();
-	    test_value($insert_stmt.affectedRows(), 1, "affected rows after insert");
+	    insert_stmt.beginTransaction();
+	    on_success insert_stmt.commit();
+	    insert_stmt.exec();
+	    test_value(insert_stmt.affectedRows(), 1, "affected rows after insert");
 	};
 
-	$insert();
+	insert();
 
-	$now = now_us();
-	$insert();
+	now = now_us();
+	insert();
 
-	$now = now_us();
-	$insert();
+	now = now_us();
+	insert();
 
-	$now = now_us();
-	$insert();
+	now = now_us();
+	insert();
     }
     info("commit done");
 
-    on_exit $select_stmt.commit();
+    on_exit select_stmt.commit();
 
-    $select_stmt.exec();
-    my int $rows;
-    while ($select_stmt.next()) {
-	++$rows;
-	my hash $rv = $select_stmt.fetchRow();
-	info("row=%n", $rv);
+    select_stmt.exec();
+    int rows;
+    while (select_stmt.next()) {
+	++rows;
+	hash rv = select_stmt.fetchRow();
+	info("row=%n", rv);
     }
 
-    test_value($rows, 4, "next and fetch");
+    test_value(rows, 4, "next and fetch");
 
-    $select_stmt.close();
+    select_stmt.close();
     info("closed");
 
-    $select_stmt.exec();
-    my any $v = $select_stmt.fetchRows(-1);
-    test_value(elements $v, 4, "fetch rows");
-    info("rows=%N", $v);
+    select_stmt.exec();
+    any v = select_stmt.fetchRows(-1);
+    test_value(elements v, 4, "fetch rows");
+    info("rows=%N", v);
 
-    $select_stmt.close();
+    select_stmt.close();
     info("closed");
 
-    $select_stmt.exec();
-    $v = $select_stmt.fetchColumns(-1);
-    test_value(elements $v, 5, "fetch columns");
+    select_stmt.exec();
+    v = select_stmt.fetchColumns(-1);
+    test_value(elements v, 5, "fetch columns");
 
-    $select_stmt.exec();
-    $v = $select_stmt.fetchColumns(-1);
-    test_value(elements $v, 5, "fetch columns 2");
+    select_stmt.exec();
+    v = select_stmt.fetchColumns(-1);
+    test_value(elements v, 5, "fetch columns 2");
 
-    info("columns=%N", $v);
+    info("columns: %N", v);
+
+    select_stmt.exec();
+    
+    *list l = select_stmt.fetchRows(3);
+    test_value(l.size(), 3, "fetch rows 1");
+    l = select_stmt.fetchRows(3);
+    test_value(l.size(), 1, "fetch rows 2");
+    l = select_stmt.fetchRows(3);
+    test_value(l.size(), 0, "fetch rows 3");
+    try {
+	l = select_stmt.fetchRows(3);
+	test_value(True, False, "fetch rows 4");
+    }
+    catch (hash ex) {
+	test_value(ex.err, "ORACLE-SELECT-ROWS-ERROR", "fetch rows 4");
+    }
 }
 
-sub test2(SQLStatement $stmt) {
+sub test2(SQLStatement stmt) {
     info("test2");
-    on_exit $stmt.commit();
+    on_exit stmt.commit();
 
-    $stmt.bindPlaceholders(Type::Date);
-    #$stmt.exec();
-    my any $v = $stmt.getOutput();
-    test_value(elements $v, 1, "first get output");
-    info("output: %n", $v);
+    stmt.bindPlaceholders(Type::Date);
+    #stmt.exec();
+    any v = stmt.getOutput();
+    test_value(elements v, 1, "first get output");
+    info("output: %n", v);
 
-    $stmt.close();
+    stmt.close();
     info("closed");
 
-    $stmt.bindPlaceholders(Type::Date);
-    #$stmt.exec();
-    $v = $stmt.getOutput();
-    test_value(elements $v, 1, "second get output");
-    info("output: %n", $v);
+    stmt.bindPlaceholders(Type::Date);
+    #stmt.exec();
+    v = stmt.getOutput();
+    test_value(elements v, 1, "second get output");
+    info("output: %n", v);
 }
 
-sub test3(SQLStatement $stmt) {
+sub test3(SQLStatement stmt) {
     info("test3");
     try {
-	$stmt.beginTransaction();
+	stmt.beginTransaction();
 	info("begin transaction");
-	$stmt.exec();
+	stmt.exec();
 	test_value(True, False, "first negative select");
     }
-    catch ($ex) {
-	info("%s: %s", $ex.err, $ex.desc);
+    catch (ex) {
+	info("%s: %s", ex.err, ex.desc);
 	test_value(True, True, "first negative select");
     }
     try {
-	on_success $stmt.commit();
-	on_error $stmt.rollback();
-	my any $rv = $stmt.fetchColumns(-1);
-	info("ERR rows=%N", $rv);
+	on_success stmt.commit();
+	on_error stmt.rollback();
+	any rv = stmt.fetchColumns(-1);
+	info("ERR rows=%N", rv);
 	test_value(True, False, "second negative select");
     }
-    catch ($ex) {
-	info("%s: %s", $ex.err, $ex.desc);
+    catch (ex) {
+	info("%s: %s", ex.err, ex.desc);
 	test_value(True, True, "second negative select");
     }
     info("rollback done");
 }
 
-sub test4(SQLStatement $delete_stmt, SQLStatement $select_stmt) {
+sub test4(SQLStatement delete_stmt, SQLStatement select_stmt) {
     info("test4");
     {
-	$delete_stmt.beginTransaction();
-	on_success $delete_stmt.commit();
-	$delete_stmt.exec();
-	test_value(4, $delete_stmt.affectedRows(), "affected rows");
-	$delete_stmt.close();
+	delete_stmt.beginTransaction();
+	on_success delete_stmt.commit();
+	delete_stmt.exec();
+	test_value(4, delete_stmt.affectedRows(), "affected rows");
+	delete_stmt.close();
     }
     info("commit done");
 
-    $select_stmt.exec();
-    on_exit $select_stmt.commit();
-    my any $rv = $select_stmt.fetchRows();
-    test_value($rv, (), "select after delete");
-    #info("test: %N", $stmt.fetchRows());
+    select_stmt.exec();
+    on_exit select_stmt.commit();
+    any rv = select_stmt.fetchRows();
+    test_value(rv, (), "select after delete");
+    #info("test: %N", stmt.fetchRows());
 }
 
-sub test5(SQLStatement $plsql) {
+sub test5(SQLStatement plsql) {
     info("test5");
     {
-        $plsql.beginTransaction();
-        on_success $plsql.commit();
-        $plsql.execArgs( ('VALID', Type::String) );
-        my hash $ret = $plsql.getOutput();
-        #printf("%N\n", $ret);
-        $plsql.close();
+        plsql.beginTransaction();
+        on_success plsql.commit();
+        plsql.execArgs( ('VALID', Type::String) );
+        hash ret = plsql.getOutput();
+        #printf("%N\n", ret);
+        plsql.close();
     }
     info("fetch done");
 }
